ChangeColor for image added Using values of bytes table to change RGB values Temporary button Load for tests added Temporary Decoder added

--- a/ApplicationStarter/ApplicationStarter.csproj
+++ b/ApplicationStarter/ApplicationStarter.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MvvmCross.Platforms.Wpf" Version="7.1.2" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
