--- a/ApplicationStarter/ApplicationStarter.csproj
+++ b/ApplicationStarter/ApplicationStarter.csproj
@@ -2,17 +2,18 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Win32.Primitives" Version="4.3.0" />
     <PackageReference Include="MvvmCross.Platforms.Wpf" Version="7.1.2" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BasicLib\BasicLib.csproj" />
+    <ProjectReference Include="..\BasicLibrary\BasicLibrary.csproj" />
   </ItemGroup>
 
 </Project>
